--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@ body {
   overflow-x: hidden;
   font-family: Inter, sans-serif;
 }
-
+@import "swiper/css";
 /* body {
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
