--- a/components/header/style.module.css
+++ b/components/header/style.module.css
@@ -22,12 +22,13 @@
 }
 .hamburger {
   display: none;
-  z-index: 10;
+  position: relative;
   cursor: pointer;
   padding: 0px;
   border: none;
   margin: 0;
   background: none;
+  z-index: 3;
 }
 
 .hamburger.isActive {
@@ -106,7 +107,7 @@
   }
   .userProfile.userActive {
     display: block;
-    z-index: 1;
+    z-index: 3;
   }
 }
 @media (max-width: 420px) {
