--- a/components/favorite/style.module.css
+++ b/components/favorite/style.module.css
@@ -1,8 +1,8 @@
 .cartContainer {
   max-width: 1280px;
   margin: 40 auto 60px;
-  gap: 20px;
   display: grid;
+  gap: 20px;
   grid-template-columns: repeat(4, 1fr);
 }
 .header {
@@ -78,11 +78,11 @@
   cursor: pointer;
 }
 .icon {
-  padding: 10px 10px 10px 8px;
+  padding: 10px 10px 10px 7px;
 }
 .btn {
-  width: 40px;
-  height: 40px;
+  width: 38px;
+  height: 30px;
   display: flex;
   align-items: center;
   overflow: hidden;
@@ -93,15 +93,8 @@
   font-size: 12px;
   color: #070422;
 }
-
-.checoutBtn {
-  font-size: 14px;
-  padding: 12px 38px;
-  border-radius: 12px;
-  border: none;
-  background-color: #070422;
-  color: white;
-  cursor: pointer;
+.btn:hover {
+  width: 200px;
 }
 .removeBtn {
   position: absolute;
