--- a/components/navigation/style.module.css
+++ b/components/navigation/style.module.css
@@ -7,6 +7,7 @@
   font-size: 18px;
   font-family: Inter, sans-serif;
   color: #070422;
+  z-index: 2;
 }
 @media (max-width: 890px) {
   .container {
@@ -26,6 +27,5 @@
   }
   .isActive {
     transform: translateX(0);
-
   }
 }
