--- a/components/orderForm/style.module.css
+++ b/components/orderForm/style.module.css
@@ -11,14 +11,22 @@
   opacity: 0;
   pointer-events: none;
   transition: 0.5s;
-  z-index: 3;
+  z-index: 8;
 }
 .content {
   background-color: white;
   max-width: 1280px;
   width: 100%;
   margin: auto auto;
-  padding: 30px 80px 55px;
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  align-items: center;
+  overflow-y: scroll;
+  scrollbar-width: none;
+  justify-content: center;
+  align-items: center;
+  padding: 90px 80px 0px;
   border-radius: 32px;
   transform: scale(0.5);
   transition: 0.4s all;
@@ -29,4 +37,137 @@
 }
 .content.active {
   transform: scale(1);
+}
+.container {
+  max-width: 1120px;
+  margin: 0 auto;
+}
+.title {
+  font-size: 44px;
+  font-weight: 600;
+}
+.borderBottom {
+  border-bottom: 1px solid #070422;
+  margin: 30px 0 30px;
+}
+.span {
+  font-size: 24px;
+  color: #070422;
+  font-weight: 600;
+}
+.userInfo {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.label {
+  font-size: 14px;
+}
+.form {
+  max-width: 1120px;
+  width: 100%;
+}
+.input {
+  padding: 15px 20px;
+  border-radius: 8px;
+  font-size: 16px;
+  width: 550px;
+}
+.contInput {
+  max-width: 550px;
+
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+}
+.imgCon {
+  position: relative;
+  max-width: 700px;
+}
+.img {
+  object-fit: cover;
+  border-radius: 50%;
+}
+.removeBtn {
+  position: absolute;
+  top: 5;
+  right: 0;
+  background: none;
+  border: none;
+  cursor: pointer;
+  display: none;
+}
+.imgCon:hover .removeBtn {
+  display: block;
+}
+.goods {
+  display: flex;
+  flex-wrap: wrap-reverse;
+  gap: 10px;
+  align-items: center;
+}
+.payment {
+  padding: 15px 20px;
+  border-radius: 8px;
+  font-size: 16px;
+  width: 1120px;
+}
+.controls {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  gap: 20px;
+  margin-top: 20px;
+}
+.closeBtn {
+  padding: 24px 48px;
+  color: #070422;
+  font-size: 20px;
+  border-radius: 12px;
+  border: none;
+  background-color: #ededed;
+  cursor: pointer;
+}
+.payBtn {
+  padding: 24px 48px;
+  color: #ffffff;
+  font-size: 20px;
+  border-radius: 12px;
+  border: none;
+  background-color: #070422;
+  cursor: pointer;
+}
+@media (max-width: 1220px) {
+  .input {
+    max-width: 300px;
+  }
+  .payment {
+    max-width: 300px;
+  }
+}
+
+@media (max-width: 720px) {
+  .input {
+    max-width: 180px;
+  }
+  .payment {
+    max-width: 195px;
+  }
+  .closeBtn {
+    padding: 14px 24px;
+    font-size: 14px;
+  }
+  .payBtn {
+    padding: 14px 24px;
+    font-size: 14px;
+  }
+  .span {
+    font-size: 18px;
+  }
+  .label {
+    font-size: 12px;
+  }
+  .controls {
+    justify-content: center;
+  }
 }
