add strapi env url

--- a/components/favorite/style.module.css
+++ b/components/favorite/style.module.css
@@ -56,7 +56,7 @@
   max-width: 1400px;
   margin-top: 30px;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
   gap: 30px;
 }
