--- a/app/globals.css
+++ b/app/globals.css
@@ -1,21 +1,38 @@
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
-  font-family: Inter, sans-serif;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 /* body {
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 } */
-
+body {
+  height: 100%;
+  margin: 0;
+  font-family: "Inter", sans-serif;
+}
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
 
+.layout {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.main-content {
+  flex-grow: 1;
+}
+.headerContainer {
+  padding: 20px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+}
 a {
   color: inherit;
   text-decoration: none;
