--- a/components/reviewsHomePage/style.module.css
+++ b/components/reviewsHomePage/style.module.css
@@ -1,6 +1,7 @@
 .container {
   max-width: 1280px;
   margin: 150px auto;
+  padding: 20px;
 }
 .reviews__title {
   font-size: 32px;
@@ -18,7 +19,8 @@
 .reviews__card {
   background: #fff;
   border-radius: 12px;
-  box-shadow: 0 4px 12px rgba(35, 33, 33, 0.08);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+
   padding: 30px;
   max-width: 400px;
   min-height: 335px;
@@ -93,16 +95,19 @@
   align-items: center;
   gap: 20px;
 }
-@media (max-width: 640px) {
+@media (max-width: 660px) {
+  .reviews__list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
   .reviews {
     padding: 20px;
   }
 
-  .reviews__list {
-    grid-template-columns: 1fr;
-    padding: 0px;
-  }
   .reviews__title {
-    font-size: 20px;
+    text-align: center;
+    font-size: 26px;
   }
 }
