--- a/components/slider/style.module.css
+++ b/components/slider/style.module.css
@@ -4,6 +4,11 @@
   max-width: 1280px;
   margin: 60px auto 0;
 }
+.container__title {
+  padding: 20px;
+  margin-top: 0;
+  margin-bottom: 20px;
+}
 .cart {
   max-width: 300px;
   border-radius: 12px;
