--- a/components/founder/styles.module.css
+++ b/components/founder/styles.module.css
@@ -39,8 +39,13 @@
   }
   .text {
     max-width: 600px;
-    text-align: justify;
+    text-align: center;
     font-size: 18px;
+  }
+  .image {
+    width: 100%;
+
+    height: 100%;
   }
 }
 
@@ -52,10 +57,6 @@
   .title {
     font-size: 32px;
     text-align: start;
-  }
-  .image {
-    max-width: 442px;
-    max-height: 447px;
   }
 }
 @media screen and (max-width: 520px) {
@@ -70,11 +71,10 @@
     font-size: 24px;
   }
   .text {
+    padding: 10px;
     font-size: 16px;
   }
   .image {
-    max-width: 342px;
-    max-height: 347px;
     padding-top: 10px;
   }
 }
