--- a/components/heroSection/styles.module.css
+++ b/components/heroSection/styles.module.css
@@ -74,8 +74,7 @@
     font-size: 32px;
   }
   .image {
-    max-width: 442px;
-    max-height: 447px;
+    width: 100%;
   }
 }
 @media screen and (max-width: 520px) {
@@ -93,6 +92,7 @@
     text-align: start;
   }
   .text {
-    text-align: start;
+    margin-top: 20px;
+    text-align: center;
   }
 }
