--- a/components/slider/style.module.css
+++ b/components/slider/style.module.css
@@ -12,7 +12,7 @@
 .cart {
   max-width: 300px;
   border-radius: 12px;
-  box-shadow: 12px 7px 27px #71717137;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
   padding: 20px;
 }
 
