--- a/components/catalogTitle/style.module.css
+++ b/components/catalogTitle/style.module.css
@@ -5,9 +5,10 @@
 .title {
   font-size: 32px;
   text-align: center;
-  margin-bottom: 20px;
+  margin: 40px 0;
 }
 .bottom {
   width: 100%;
   border-bottom: 1px solid black;
+  margin-bottom: 20px;
 }
