--- a/components/categorySlider/style.module.css
+++ b/components/categorySlider/style.module.css
@@ -3,12 +3,17 @@
   width: 100%;
   max-width: 1280px;
   margin: 60px auto 0;
+  padding: 10px;
 }
 .cart {
   max-width: 300px;
   border-radius: 12px;
-  box-shadow: 12px 7px 27px #71717137;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
   padding: 20px;
+}
+.image {
+  width: 100%;
+  height: 100%;
 }
 .titleContainer {
   display: flex;
@@ -77,6 +82,9 @@
 }
 @media (max-width: 760px) {
   .controls {
-    justify-content: center;
+    display: none;
+  }
+  .span {
+    font-size: 16px;
   }
 }
