--- a/components/modal/styles.module.css
+++ b/components/modal/styles.module.css
@@ -47,6 +47,10 @@
   font-size: 24px;
   font-weight: 600;
 }
+.image {
+  width: 100%;
+  height: 100%;
+}
 .list {
   list-style: none;
 }
@@ -57,4 +61,22 @@
 }
 .span {
   color: gray;
+}
+@media (max-width: 820px) {
+  .content {
+    padding: 20px 40px 30px;
+    max-width: 480px;
+  }
+  .title {
+    font-size: 24px;
+  }
+  .title2 {
+    font-size: 18px;
+  }
+  .paragh {
+    font-size: 13px;
+  }
+  .list li {
+    font-size: 10px;
+  }
 }
