--- a/components/slider/style.module.css
+++ b/components/slider/style.module.css
@@ -29,6 +29,8 @@
 .controls {
   max-width: 1400px;
   margin-top: 30px;
+  margin-bottom: 30px;
+
   display: flex;
   justify-content: end;
   align-items: center;
@@ -73,6 +75,6 @@
 }
 @media (max-width: 760px) {
   .controls {
-    justify-content: center;
+    display: none;
   }
 }
