--- a/components/basket/style.module.css
+++ b/components/basket/style.module.css
@@ -1,14 +1,16 @@
 .cartContainer {
   position: relative;
   max-width: 1280px;
-  margin: 40 auto 60px;
+  margin: 40px auto 60px;
   gap: 20px;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
 }
+
 .header {
   max-width: 1280px;
-  margin: 0 auto;
+  margin: 30 auto 0;
+  padding: 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -28,7 +30,8 @@
   position: relative;
   max-width: 300px;
   border-radius: 12px;
-  box-shadow: 12px 7px 27px #71717137;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+
   padding: 20px;
 }
 .clearCont {
@@ -118,7 +121,7 @@
 }
 .openOrder {
   position: absolute;
-  left: 60%;
+  left: 67%;
   top: 0;
 }
 .orderBtn {
@@ -132,17 +135,31 @@
   border-radius: 10px 10px 0 0;
 }
 .openOrder.OrderActive {
-  top: 142px;
+  top: 148px;
 }
-@media (max-width: 430px) {
-  .openOrder.OrderActive {
-    z-index: 7;
-    top: 230px;
+@media (max-width: 660px) {
+  .cartContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 }
-@media (max-width: 500px) {
+@media (max-width: 525px) {
   .header {
     flex-direction: column;
     align-items: start;
+  }
+  .header h1 {
+    margin-bottom: 20px;
+  }
+}
+
+@media (max-width: 430px) {
+  .openOrder {
+    left: 75%;
+  }
+  .openOrder.OrderActive {
+    top: 196px;
   }
 }
