--- a/components/header/style.module.css
+++ b/components/header/style.module.css
@@ -14,6 +14,7 @@
 }
 .basket {
   cursor: pointer;
+  position: relative;
 }
 .favorite {
   cursor: pointer;
@@ -21,6 +22,27 @@
 .userProfile {
   cursor: pointer;
 }
+@keyframes jump {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-5px);
+  }
+}
+.count {
+  display: none;
+}
+.countAct {
+  display: block;
+  position: absolute;
+  top: -10px;
+  right: 7px;
+  font-weight: 800;
+  animation: jump 3s ease-in-out infinite;
+}
+
 .authBtn {
   display: flex;
   align-items: center;
