--- a/components/slider/style.module.css
+++ b/components/slider/style.module.css
@@ -26,6 +26,18 @@
   color: #959595;
   margin: 15px 0;
 }
+.cheackBox {
+  display: none;
+}
+.active {
+  display: none;
+}
+.check {
+  display: block;
+
+  margin-left: 8px;
+  color: #070422;
+}
 .controls {
   max-width: 1400px;
   margin-top: 30px;
@@ -69,6 +81,9 @@
   transition: 0.5s;
   font-size: 12px;
   color: #070422;
+}
+.btnHover:hover {
+  width: 0px;
 }
 .btn:hover {
   width: 200px;
