--- a/components/categorySlider/style.module.css
+++ b/components/categorySlider/style.module.css
@@ -89,6 +89,19 @@
   font-size: 12px;
   color: #070422;
 }
+.btnFavor {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  border: 1px solid #959595;
+  background: none;
+  border-radius: 8px;
+  transition: 0.5s;
+  font-size: 12px;
+  color: #070422;
+}
 .btn:hover {
   width: 200px;
 }
