--- a/components/slider/style.module.css
+++ b/components/slider/style.module.css
@@ -38,6 +38,19 @@
   margin-left: 8px;
   color: #070422;
 }
+.btnFavor {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  border: 1px solid #959595;
+  background: none;
+  border-radius: 8px;
+  transition: 0.5s;
+  font-size: 12px;
+  color: #070422;
+}
 .controls {
   max-width: 1400px;
   margin-top: 30px;
