--- a/components/orderForm/style.module.css
+++ b/components/orderForm/style.module.css
@@ -25,10 +25,7 @@
   align-items: center;
   overflow-y: scroll;
   scrollbar-width: none;
-  justify-content: center;
-  align-items: center;
   padding: 90px 80px 0px;
-  border-radius: 32px;
   transform: scale(0.5);
   transition: 0.4s all;
 }
@@ -181,5 +178,17 @@
   .img {
     width: 75px;
     height: 75px;
+  }
+  .input {
+    max-width: 300px;
+  }
+
+  .content {
+    padding: 0;
+  }
+  .userInfo {
+    gap: 0;
+    flex-direction: column;
+    align-items: flex-start;
   }
 }
